k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pedidos-express
  labels:
    app: pedidos-express
